[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stepper"]

[project]
name = "rich-stepper"
version = "0.1.0"
description = "Beautiful multi-step terminal progress widget for Rich. Connected indicators, per-step logging, elapsed timers, and optional progress bars."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Abbas", email = "abbazs@users.noreply.github.com" }]
keywords = ["cli", "terminal", "progress", "stepper", "rich", "tui", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/abbazs/rich-stepper"
Source = "https://github.com/abbazs/rich-stepper"
Issues = "https://github.com/abbazs/rich-stepper/issues"
Changelog = "https://github.com/abbazs/rich-stepper/releases"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = "tests"
